[tool.poetry]
name = "testing-repo"
version = "0.1.0"
description = ""
authors = ["cadenjurkovski-tbg <caden.jurkovski@thebernardgroup.com>"]
readme = "README.md"
packages = [{include = "testing_repo"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
